2017-08-31  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_grammar.y (load_signatures, file_md5sum): New functions.
	(init_nasl_ctx): Use checksums from md5sum file to authentify nasl
	files.

2017-08-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Rework 'Configuration Options' section, remove reference to
	a build flag that was removed a long time ago.

2017-08-29  Michael Wiegand <michael.wiegand@greenbone.net>

	Make it possible skip dependency checks during configuration. This
	makes it possible to generate documentation and source tarballs in
	environments where said dependencies are not present.

	* CMakeLists.txt: Move dependency checks to subdirectories. Do not
	consider subdirectories containing code and dependency checks when
	SKIP_SRC is defined.

	* misc/CMakeLists.txt: Explicitly check for glib-2.0 and libgvm_base
	since this is no longer done by the top-level CMakeLists.txt.

	* nasl/CMakeLists.txt: Explicitly check for glib-2.0 since this is no
	longer done by the top-level CMakeLists.txt.

	* src/CMakeLists.txt: Explicitly check for glib-2.0, libgvm_base and
	gcrypt since this is no longer done by the top-level CMakeLists.txt.

2017-08-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Use correct INPUT_ENCODING,
	otherwise Doxygen ends up producing invalid XML.

2017-08-21  Juan Jose Nicola  <juan.nicola@.greenbone.net>

	* nasl/lint.c (nasl_lint_defvar): Handle case in which the variable
	is declared in a foreach node.

2017-08-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Make openvas-nasl-lint able to check if a variable was defined
	before to be used.

	* nasl/lint.c (add_predef_varname, nasl_lint_defvar,list_cmp): New
	functions.
	(nasl_lint_call): Recieve less arguments and use a static variable.
	(nasl_lint): Pass less arguments to nasl_lint_call. New GSList.
	Call nasl_lint_defvar to check variables.
