@@ -1,15 +1,15 @@
 #!/bin/sh
 #
 # greenbone-nvt-sync
-# This script updates the local OpenVAS NVTs from the Greenbone Security Feed
-# or the Community Feed. 
+# This script updates the local Network Vulnerability Tests (NVTs) from the
+# Greenbone Security Feed (GSF) or the Greenbone Community Feed (GCF). 
 #
 # Authors:
 # Lukas Grunwald <lukas.grunwald@greenbone.net>
 # Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 # Michael Wiegand <michael.wiegand@greenbone.net>
 #
-# Copyright (C) 2009-2016 Greenbone Networks GmbH
+# Copyright (C) 2009-2017 Greenbone Networks GmbH
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -63,6 +63,7 @@ RSYNC_OPTIONS="--links --times --omit-dir-times $RSYNC_VERBOSE --recursive --par
 
 # Script and feed information which will be made available to user through
 # command line options and automated tools.
+# Script name which will be used for logging
 SCRIPT_NAME="greenbone-nvt-sync"
 
 # Result of selftest () is stored here. If it is not 0, the selftest has failed
@@ -75,7 +76,7 @@ PORT=24
 # Directory where pidfiles are located
 PIDFILEDIR="@OPENVAS_RUN_DIR@"
 
-# Directory where the OpenVAS configuration is located
+# Directory where the OpenVAS Scanner configuration is located
 OPENVAS_SYSCONF_DIR="@OPENVAS_SYSCONF_DIR@"
 
 # Location of the GSF Access Key
@@ -100,6 +101,12 @@ LOG_CMD="logger -t $SCRIPT_NAME"
 
 # Source configuration file if it is readable
 [ -r $OPENVAS_SYSCONF_DIR/greenbone-nvt-sync.conf ] && . $OPENVAS_SYSCONF_DIR/greenbone-nvt-sync.conf
+
+# NVT_DIR is the place where the NVTs are located.
+if [ -z "$NVT_DIR" ]
+then
+  NVT_DIR="@OPENVAS_NVT_DIR@"
+fi
 
 log_write () {
   $LOG_CMD -p daemon.notice $1
@@ -130,43 +137,51 @@ stderr_write ()
   echo "$1" > /dev/stderr
 }
 
+# Read the general information about the feed origin from
+# the file "plugin_feed_infoc.inc" inside the feed directory.
+get_feed_info ()
+{
+  INFOFILE="$NVT_DIR/plugin_feed_info.inc"
+  if [ -r $INFOFILE ] ; then
+    FEED_VERSION=`grep PLUGIN_SET $INFOFILE | sed -e 's/[^0-9]//g'`
+    FEED_NAME=`awk -F\" '/PLUGIN_FEED/ { print $2 }' $INFOFILE`
+    FEED_VENDOR=`awk -F\" '/FEED_VENDOR/ { print $2 }' $INFOFILE`
+    FEED_HOME=`awk -F\" '/FEED_HOME/ { print $2 }' $INFOFILE`
+    FEED_PRESENT=1
+  else
+    FEED_PRESENT=0
+  fi
+
+  if [ -z "$FEED_NAME" ] ; then
+    FEED_NAME="Unidentified Feed"
+  fi
+
+  if [ -z "$FEED_VENDOR" ] ; then
+    FEED_VENDOR="Unidentified Vendor"
+  fi
+
+  if [ -z "$FEED_HOME" ] ; then
+    FEED_HOME="Unidentified Feed Homepage"
+  fi
+}
+
+# Always try to get the information when started.
+# This also ensures variables like FEED_PRESENT are set.
+get_feed_info
+
 # Determine whether a GSF access key is present. If yes,
 # then use the Greenbone Security Feed. Else use the
 # Greenbone Community Feed.
 if [ -e $ACCESS_KEY ]
 then
   RESTRICTED=1
-
-  if [ -z "$FEED_NAME" ] ; then
-    FEED_NAME="Greenbone Security Feed"
-  fi
-
-  if [ -z "$FEED_VENDOR" ] ; then
-    FEED_VENDOR="Greenbone Networks GmbH"
-  fi
-
-  if [ -z "$FEED_HOME" ] ; then
-    FEED_HOME="http://www.greenbone.net/security-feed/"
-  fi
 else
   RESTRICTED=0
-
-  if [ -z "$FEED_NAME" ] ; then
-    FEED_NAME="OpenVAS NVT Feed"
-  fi
-
-  if [ -z "$FEED_VENDOR" ] ; then
-    FEED_VENDOR="The OpenVAS Project"
-  fi
-
-  if [ -z "$FEED_HOME" ] ; then
-    FEED_HOME="http://www.openvas.org/openvas-nvt-feed.html"
-  fi
 
   if [ -z "$COMMUNITY_NVT_RSYNC_FEED" ]; then
     COMMUNITY_NVT_RSYNC_FEED=rsync://feed.openvas.org:/nvt-feed
     # An alternative syntax which might work if the above doesn't:
-    # COMMUNITY_SCAP_RSYNC_FEED=rsync@feed.openvas.org::/nvt-feed
+    # COMMUNITY_NVT_RSYNC_FEED=rsync@feed.openvas.org::/nvt-feed
   fi
 
   if [ -z "$COMMUNITY_NVT_HTTP_FEED" ]; then
@@ -189,43 +204,9 @@ else
   SYNC_TMP_DIR="$TMPDIR"
 fi
 
-init_sync ()
-{
-  do_self_test
-  if [ $SELFTEST_FAIL -ne 0 ] ; then
-    exit $SELFTEST_FAIL
-  fi
-
-  if [ -z "$NVT_DIR" ]
-  then
-    NVT_DIR="@OPENVAS_NVT_DIR@"
-  fi
-
-  INFOFILE="$NVT_DIR/plugin_feed_info.inc"
-  if [ -r $INFOFILE ] ; then
-    FEED_VERSION=`grep PLUGIN_SET $INFOFILE | sed -e 's/[^0-9]//g'`
-    FEED_NAME=`awk -F\" '/PLUGIN_FEED/ { print $2 }' $INFOFILE`
-    FEED_VENDOR=`awk -F\" '/FEED_VENDOR/ { print $2 }' $INFOFILE`
-    FEED_HOME=`awk -F\" '/FEED_HOME/ { print $2 }' $INFOFILE`
-    FEED_PRESENT=1
-  else
-    FEED_PRESENT=0
-  fi
-
-  if [ -z "$FEED_NAME" ] ; then
-    FEED_NAME="Greenbone Security Feed"
-  fi
-
-  if [ -z "$FEED_VENDOR" ] ; then
-    FEED_VENDOR="Greenbone Networks GmbH"
-  fi
-
-  if [ -z "$FEED_HOME" ] ; then
-    FEED_HOME="http://www.greenbone.net/security-feed/"
-  fi
-
-  FEED_CURRENT=0
-}
+# Initialize this indicator variable with default assuming the
+# feed is not up-to-date.
+FEED_CURRENT=0
 
 # This function uses gos-state-manager to get information about the settings.
 # If gos-state-manager is not installed the values of the settings can not be
@@ -596,7 +577,7 @@ sync_nvts(){
     done
     cleanup_temp_access_key
     log_write "Synchronization with the Greenbone Security Feed successful."
-    init_sync
+    get_feed_info
     if [ $FEED_PRESENT -eq 1 ] ; then
       FEEDCOUNT=`grep -E "nasl$|inc$" $NVT_DIR/md5sums | wc -l`
       log_write "Current status: Using $FEED_NAME at version $FEED_VERSION ($FEEDCOUNT NVTs)"
@@ -646,18 +627,12 @@ do_self_test ()
 
 do_describe ()
 {
-  if [ -z "$NVT_DIR" ] ; then
-    init_sync
-  fi
   echo "This script synchronizes an NVT collection with the '$FEED_NAME'."
   echo "The '$FEED_NAME' is provided by '$FEED_VENDOR'."
   echo "Online information about this feed: '$FEED_HOME'."
 }
 
 do_feedversion () {
-  if [ -z "$NVT_DIR" ] ; then
-    init_sync
-  fi
   if [ $FEED_PRESENT -eq 1 ] ; then
     echo $FEED_VERSION
   else
@@ -668,7 +643,10 @@ do_feedversion () {
 
 do_sync ()
 {
-  init_sync
+  do_self_test
+  if [ $SELFTEST_FAIL -ne 0 ] ; then
+    exit $SELFTEST_FAIL
+  fi
 
   if [ $REFRESH_ONLY -ne 1 ]
   then
@@ -727,7 +705,6 @@ while test $# -gt 0; do
       FIXED_METHOD="curl"
       ;;
     --identify)
-      init_sync
       echo "NVTSYNC|$SCRIPT_NAME|$VERSION|$FEED_NAME|$RESTRICTED|NVTSYNC"
       exit 0
       ;;
@@ -758,7 +735,6 @@ while test $# -gt 0; do
       shift
       ;;
     --feedcurrent)
-      init_sync
       is_feed_current
       exit $?
       ;;
