@@ -1,3 +1,10 @@
+2017-09-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* tools/greenbone-nvt-sync.in: Globally set NVT_DIR instead of
+	on-demand. Separate the retrieval of feed meta information into
+	funtion of its own. Don't fall back to static feed meta info
+	in case the feed does not not contain any.
+
 2017-08-31  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_grammar.y (load_signatures, file_md5sum): New functions.
